--- a/.gitignore
+++ b/.gitignore
@@ -11,6 +11,7 @@ fastACI_file_template.m
 optimal_detector_cfg.m
 dau1997_cfg.m
 king2019_cfg.m
+maxwell2020_cfg.m
 osses2021_cfg.m
 osses2022a_cfg.m
 relanoiborra2019_cfg.m
