--- a/.gitignore
+++ b/.gitignore
@@ -7,6 +7,7 @@ Interim_results/*.mat
 *.DS_Store
 fastACI_dir_data.m
 fastACI_dir_amtoolbox.m
+fastACI_dir_phaseret.m
 fastACI_file_template.m
 optimal_detector_cfg.m
 dau1997_cfg.m
