Adding the Intellitest

--- a/.gitignore
+++ b/.gitignore
@@ -8,6 +8,7 @@ Interim_results/*.mat
 fastACI_dir_data.m
 fastACI_dir_amtoolbox.m
 fastACI_dir_phaseret.m
+fastACI_dir_AFCtoolbox.m
 fastACI_file_template.m
 optimal_detector_cfg.m
 dau1997_cfg.m
