--- a/.gitignore
+++ b/.gitignore
@@ -6,6 +6,7 @@
 Interim_results/*.mat
 *.DS_Store
 fastACI_dir_data.m
+fastACI_dir_datapost.m
 fastACI_dir_amtoolbox.m
 fastACI_dir_phaseret.m
 fastACI_dir_AFCtoolbox.m
