--- a/.gitignore
+++ b/.gitignore
@@ -10,6 +10,7 @@ fastACI_dir_datapost.m
 fastACI_dir_amtoolbox.m
 fastACI_dir_phaseret.m
 fastACI_dir_AFCtoolbox.m
+fastACI_dir_world.m
 dau1997_cfg.m
 king2019_cfg.m
 king2019a_cfg.m
